--- a/introduction.tex
+++ b/introduction.tex
@@ -1,4 +1,3 @@
-
 \documentclass[thesis-solanki.tex]{subfiles}
 
 
@@ -113,16 +112,16 @@ can help to blend the two.
 enables encoding of search problems.
 
 A domain-specific language (DSL) is a concise micro language that offers tools and functionalities focused on a
-particular problem domain.\label{sec:DSL-def}
-In many cases, DSL programs are translated to calls to a common subroutine library and the DSL can be viewed as a
-means to hide the details of that library \cite{van2000domain}. A domain specific language (DSL) is built specically to express the 
-concepts of a particular domain. Generally, two types of DSL can be distinguished according to the underlying implementation strategy. An
-external DSL (eDSL)
-is constructed from scratch, starting from definition of the desired syntax to implementation of the associated parser for reading it. In contrast, internal or embedded DSL are constructed on top of an existing host language \cite{machadomodel}.
+particular problem domain.\label{sec:DSL-def} In many cases, DSL programs are translated to calls to a common
+subroutine library and the DSL can be viewed as a means to hide the details of that library \cite{van2000domain}.
+A domain specific language (DSL) is built specically to express the concepts of a particular domain.
+Generally, two types of DSL can be distinguished according to the underlying implementation strategy.
+An external DSL (eDSL) is constructed from scratch, starting from definition of the desired syntax to
+implementation of the associated parser for reading it.
+In contrast, internal or embedded DSL are constructed on top of an existing host language \cite{machadomodel}.
 
-Putting all of the above together, Domain Specific Languages
-are pretty good in doing what they are designed to do, but nothing else, resulting in choosing a different language
-every time.
+Putting all of the above together, Domain Specific Languages are pretty good in doing what they are designed to do,
+but nothing else, resulting in choosing a different language every time.
 On the other hand, a general purpose language can be used for solving a wide variety of problems but often the
 programmer ends up writing some code dictated by the language rather than by the problem.
 
@@ -198,18 +197,22 @@ This can be achieved in two ways:
 %----------------------------------------------------------------------------
 \section{Thesis organization}
 
-The next chapter, Chapter~\ref{chap:background} talks about the programming paradigms and languages
-in general and the ones in question.
-Chapter~\ref{chap:proposedWork} provides details about the shortcomings of the
-previous works and an approach for improvements. Chapter~\ref{chap:accomplishedWork} provides details on the conceptual contributions
-of this thesis and the prototypes.
-Then we look at the question from different angles namely, Chapter~\ref{chap:embedding},  embedding
-a programming language into another programming language and  Chapter~\ref{chap:multiparadigm}, multi
-paradigm languages (functional logic languages).
-Some of the indirectly related content resides in Chapter~\ref{chap:relatedWork}. Chapters \ref{chap:hwh} and \ref{chap:pwp} discuss the 
-languages used in this thesis; \progLang{Haskell} and \progLang{Prolog}. Chapters \ref{proto1}, \ref{proto2}, \ref{proto3} and 
-\ref{proto4} describe the ideas and the implementation details of the prototypes. Chapter~\ref{chap:futureScope} gives a 
-glimpse of the future and we conclude with the Chapter~\ref{chap:conclusion}.
+The next chapter, Chapter~\ref{chap:background} talks about the programming paradigms and languages in general and
+the ones in question.
+Chapter~\ref{chap:proposedWork} provides details about the shortcomings of the previous works and an approach for
+improvements.
+Chapter~\ref{chap:accomplishedWork} provides details on the conceptual contributions of this thesis and the
+prototypes.
+Then we look at the question from different angles namely, Chapter~\ref{chap:embedding},  embedding a programming
+language into another programming language and  Chapter~\ref{chap:multiparadigm}, multi paradigm languages
+(functional logic languages).
+Some of the indirectly related content resides in Chapter~\ref{chap:relatedWork}.
+Chapters \ref{chap:hwh} and \ref{chap:pwp} discuss the languages used in this thesis; \progLang{Haskell} and
+\progLang{Prolog}.
+Chapters \ref{proto1}, \ref{proto2}, \ref{proto3} and \ref{proto4} describe the ideas and the implementation
+details of the prototypes.
+Chapter~\ref{chap:futureScope} gives a glimpse of the future and we conclude with the
+Chapter~\ref{chap:conclusion}.
 
 
 \ifMain\ifDraft
