--- a/proto2.tex
+++ b/proto2.tex
@@ -12,17 +12,20 @@
 This chapter attempts to infuse the generic methodology from Chapter~\ref{proto1} in a current \progLang{Prolog}
 implementation \cite{prolog-lib} and make the unification ``monadic''.
 
-This chapter discusses the idea of implementing a basic working \progLang{Prolog} query resolver while using \codeLibrary{prolog-0.2.0.1}
-\cite{prolog-lib} as the base implementation.
+This chapter discusses the idea of implementing a basic working \progLang{Prolog} query resolver while using
+\codeLibrary{prolog-0.2.0.1} \cite{prolog-lib} as the base implementation.
 The language modifications and unification mechanism have been taken from Chapter~\ref{proto1} and adapted to fit
 in with the other components such as the search strategy of the library.
 
 
 \section{How \protect\codeLibrary{prolog-0.2.0.1} works}
 
-The \codeLibrary{prolog-0.2.0.1} library (\cite{prolog-lib}) was written by Matthias Bartsch and consists of 14 \progLang{Haskell} files. It 
-implements data base assertions and cuts but lacks any IO facilities. Moreover, the abstract syntax used to implement the language is rigid
-and leaves very little to no scope for extension. Figure~\ref{fig:prlg0201architecture} describes its architecture.
+The \codeLibrary{prolog-0.2.0.1} library (\cite{prolog-lib}) was written by Matthias Bartsch and consists of 14
+\progLang{Haskell} files.
+It implements data base assertions and cuts but lacks any IO facilities.
+Moreover, the abstract syntax used to implement the language is rigid and leaves very little to no scope for
+extension.
+Figure~\ref{fig:prlg0201architecture} describes its architecture.
 
 \begin{figure}[H]
 \centering
@@ -82,11 +85,13 @@ Nonetheless, the library has the following major components as shown in Figure~\
 \item the Read-Eval-Print Loop (REPL).
 \end{itemize}
 
-To prove the modularity of the approach used in Chapter~\ref{proto1} for language modification and monadic unification only the abstract syntax and unifier will be customized.
+To prove the modularity of the approach used in Chapter~\ref{proto1} for language modification and monadic
+unification only the abstract syntax and unifier will be customized.
 
 \section{What we do in this prototype?}
 
-Figure~\ref{fig:architecture-proto-2} describes the components of this implementation and the relation between them.
+Figure~\ref{fig:architecture-proto-2} describes the components of this implementation and the relation between
+them.
 
 \begin{figure}[H]
   \includegraphics[width=1\textwidth]{Prototype-2-diagram.pdf}
@@ -96,27 +101,28 @@ Figure~\ref{fig:architecture-proto-2} describes the components of this implement
 \end{figure}
 
 
-Unification is a part of how \progLang{Prolog} works to produce a solution to the query. The \prologConstruct{unification} procedure
-tells us whether or not two terms can be made equal. Before reaching that state, two terms must be gathered depending 
-upon matching rules in the knowledge base. This is where a search strategy comes into play along with a backtracking mechanism.
+Unification is a part of how \progLang{Prolog} works to produce a solution to the query.
+The \prologConstruct{unification} procedure tells us whether or not two terms can be made equal.
+Before reaching that state, two terms must be gathered depending upon matching rules in the knowledge base.
+This is where a search strategy comes into play along with a backtracking mechanism.
 
 Putting everything together forms the \progLang{Prolog} query resolver.
 Given a query and a knowledge, the query resolver matches the input query with the rules in the knowledge base to
 create a list of goals to satisfy to generate an unifier along with saving choice points on the way for
 backtracking.
 
-This chapter discusses how the abstract syntax and query resolver from \cite{prolog-lib} can be adapted to
-the concepts and implementation from Chapter~\ref{proto1}.
-This not only proves how generic and modular the approach from the previous chapter is, but also the working \progLang{Prolog} system
-as a whole.
-
+This chapter discusses how the abstract syntax and query resolver from \cite{prolog-lib} can be adapted to the
+concepts and implementation from Chapter~\ref{proto1}.
+This not only proves how generic and modular the approach from the previous chapter is, but also the working
+\progLang{Prolog} system as a whole.
 
 
 \section{Procedure}
 
 
 \subsection{Flatten the language by introducing a type variable}
-The first component describes the process of creating a modified version of the current abstract syntax used by the library as shown in Listing~\ref{tab:origgramp0201}.
+The first component describes the process of creating a modified version of the current abstract syntax used by the
+library as shown in Listing~\ref{tab:origgramp0201}.
 
 \begin{code-list}[H]
 	\begin{singlespace}
@@ -126,13 +132,14 @@ The first component describes the process of creating a modified version of the 
 \label{tab:origgramp0201}
 \end{code-list}
 
-The grammar suffers from most of the drawbacks mentioned in Chapter~\ref{proto1}. This implementation focuses on creating a working  
-\progLang{Prolog} query resolver with \haskellConstruct{monadic} \prologConstruct{uni\-fi\-ca\-tion}. The base implementation 
-adopted from \codeLibrary{prolog-0.2.0.1} \cite{prolog-lib} already has a working implementation, but lacks benefits achieved from
-our approach mention in the previous chapter.
+The grammar suffers from most of the drawbacks mentioned in Chapter~\ref{proto1}.
+This implementation focuses on creating a working \progLang{Prolog} query resolver with \haskellConstruct{monadic}
+\prologConstruct{uni\-fi\-ca\-tion}.
+The base implementation adopted from \codeLibrary{prolog-0.2.0.1} \cite{prolog-lib} already has a working
+implementation, but lacks benefits achieved from our approach mention in the previous chapter.
 
-The non-recursive implementation described in Listing~\ref{tab:flatgrp0201} introduces a type variable which separates the structure from 
-the data itself.
+The non-recursive implementation described in Listing~\ref{tab:flatgrp0201} introduces a type variable which
+separates the structure from the data itself.
 
 \begin{code-list}[H]
   \begin{singlespace}
@@ -160,8 +167,9 @@ Lastly, the fixed point version is created using the Fix constructor
 \label{tab:fixflatgrp0201}
 \end{code-list}
 
-The above approach allows to us to jump between the environments (grammars) easily provided the back and forth conversion capabilities 
-Listing~\ref{tab:prlg0201monadicunificationtranslation} and Listing~\ref{tab:prlg0201monadicunificationconversion}.
+The above approach allows to us to jump between the environments (grammars) easily provided the back and forth
+conversion capabilities Listing~\ref{tab:prlg0201monadicunificationtranslation} and
+Listing~\ref{tab:prlg0201monadicunificationconversion}.
 
 \begin{code-list}[H]
   \begin{singlespace}
@@ -180,14 +188,17 @@ Listing~\ref{tab:prlg0201monadicunificationtranslation} and Listing~\ref{tab:prl
 \end{code-list}
 
 
-After the language is opened up, the next step is to replace the current unification procedure from \codeLibrary{prolog-0.2.0.1} \cite{prolog-lib} with one 
-similar to Chapter~\ref{proto1}.
+After the language is opened up, the next step is to replace the current unification procedure from
+\codeLibrary{prolog-0.2.0.1} \cite{prolog-lib} with one similar to Chapter~\ref{proto1}.
 
 
-The current unification uses basic pattern matching to unify terms. This approach tightly couples the unification to the embedded language meaning that every 
-language change requires rewriting the unification procedure. Secondly, the unification procedure is correct but not very efficient. Given that 
-\codeLibrary{unification-fd} \cite{unification-fd-lib} provides an efficient implementation of imperative unification algorithms, we have another reason to 
-replace the unification mechanism from \codeLibrary{prolog-0.2.0.1} \cite{prolog-lib}.  
+The current unification uses basic pattern matching to unify terms.
+This approach tightly couples the unification to the embedded language meaning that every language change requires
+rewriting the unification procedure.
+Secondly, the unification procedure is correct but not very efficient.
+Given that \codeLibrary{unification-fd} \cite{unification-fd-lib} provides an efficient implementation of
+imperative unification algorithms, we have another reason to replace the unification mechanism from
+\codeLibrary{prolog-0.2.0.1} \cite{prolog-lib}.
 
 The results produced by the query resolver are shown in Listing~\ref{tab:prlg0201unifier}.
 \begin{code-list}[H]
@@ -201,7 +212,7 @@ The results produced by the query resolver are shown in Listing~\ref{tab:prlg020
 A \prologConstruct{Unifier} is a list of \prologConstruct{Substitutions} which binds a variable to a value.
 
 The unification procedure is shown in Figure~\ref{tab:prlg0201unification}.
-Each language expression is matched based on its structure and returns a \haskellConstruct{Unifier} . 
+Each language expression is matched based on its structure and returns a \haskellConstruct{Unifier} .
 
 
 \begin{code-list}[H]
@@ -213,15 +224,15 @@ Each language expression is matched based on its structure and returns a \haskel
 \end{code-list}
 
 \begin{comment}
-Before we can unify terms of our language they need to be converted to the new grammar. We also generate a mapping of variables for 
-library the library to carry out unification. See Listing~\ref{tab:prlg0201monadicunificationconversion} and 
+Before we can unify terms of our language they need to be converted to the new grammar. We also generate a mapping of variables for
+library the library to carry out unification. See Listing~\ref{tab:prlg0201monadicunificationconversion} and
 Listing~\ref{tab:prlg0201monadicunificationtranslation}.
 \end{comment}
 
-The modification to the unification procedure is described in Listing~\ref{tab:prlg0201monadicunificationfunctions}, 
-Listing~\ref{tab:prlg0201monadicunificationtestsandextraction1}, Listing~\ref{tab:prlg0201monadicunificationtestsandextraction2}, 
-Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3monadicUnification}, 
-Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3goUnify} and 
+The modification to the unification procedure is described in Listing~\ref{tab:prlg0201monadicunificationfunctions},
+Listing~\ref{tab:prlg0201monadicunificationtestsandextraction1}, Listing~\ref{tab:prlg0201monadicunificationtestsandextraction2},
+Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3monadicUnification},
+Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3goUnify} and
 Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3f1}.
 
 
@@ -254,9 +265,10 @@ In this implementation unification is a three part procedure as follows:
 \begin{enumerate}
 \item{monadicUnification}
 
-Firstly, we take a couple of flattened terms in fixed point and convert them into \haskellConstruct{UTerm}-format so that we can apply
-the \haskellConstruct{unify} function provided by \codeLibrary{unification-fd} and results in a \languageConstruct{unifier}. The type 
-signature of \haskellConstruct{unify} is shown in Listing~\ref{tab:unifytypesignature}.
+  Firstly, we take a couple of flattened terms in fixed point and convert them into \haskellConstruct{UTerm}-format
+  so that we can apply the \haskellConstruct{unify} function provided by \codeLibrary{unification-fd} and results
+  in a \languageConstruct{unifier}.
+  The type signature of \haskellConstruct{unify} is shown in Listing~\ref{tab:unifytypesignature}.
 
 \begin{code-list}[H]
 	\begin{singlespace}
@@ -266,8 +278,10 @@ signature of \haskellConstruct{unify} is shown in Listing~\ref{tab:unifytypesign
 \label{tab:unifytypesignature}
 \end{code-list}
 
-We also return a union of the variable dictionaries for each of the terms required to convert the result into the eDSL.
-Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3monadicUnification} the procedure for monadicUnification.
+We also return a union of the variable dictionaries for each of the terms required to convert the result into the
+eDSL.
+Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3monadicUnification} the procedure for
+monadicUnification.
 
 \begin{code-list}[H]
   \begin{singlespace}
@@ -279,8 +293,9 @@ Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3monadicUnification
 
 \item{f1}
 
-Retranslate the terms back to fixed flat terms and return results. Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3f1}
-returns list of \haskellConstruct{VariableName}, \haskellConstruct{Prolog} pairs. 
+Retranslate the terms back to fixed flat terms and return results.
+Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3f1}
+returns list of \haskellConstruct{VariableName}, \haskellConstruct{Prolog} pairs.
 
 \begin{code-list}[H]
   \begin{singlespace}
@@ -293,7 +308,7 @@ returns list of \haskellConstruct{VariableName}, \haskellConstruct{Prolog} pairs
 
 \item{goUnify}
 
-This function executes the above operations in the \haskellConstruct{BindingMonad} and return the necessary results. 
+This function executes the above operations in the \haskellConstruct{BindingMonad} and return the necessary results.
 Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3goUnify} shows the goUnify function.
 
 \begin{code-list}[H]
@@ -305,7 +320,7 @@ Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3goUnify} shows the
 \end{code-list}
 
 \item{unify}
-Putting it all together we perform the unification on the two terms and return the \haskellConstruct{Unifier} as originally intended. 
+Putting it all together we perform the unification on the two terms and return the \haskellConstruct{Unifier} as originally intended.
 Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3unify}
 
 \begin{code-list}[H]
@@ -322,8 +337,9 @@ Listing~\ref{tab:prlg0201monadicunificationtestsandextraction3unify}
 
 
 \section{Chapter recapitulation}
-Recapitulating, this chapter provided an implementation of a \prologConstruct{Prolog}-like language adopted from \cite{prolog-lib} and
-incorporated a monadic unifier built from \cite{unification-fd-lib} to create a \progLang{Prolog} query resolver.
+Recapitulating, this chapter provided an implementation of a \prologConstruct{Prolog}-like language adopted from
+\cite{prolog-lib} and incorporated a monadic unifier built from \cite{unification-fd-lib} to create a
+\progLang{Prolog} query resolver.
 
 \ifMain\ifDraft
 \begin{scope}
@@ -340,4 +356,3 @@ incorporated a monadic unifier built from \cite{unification-fd-lib} to create a 
 \fi\fi
 
 \end{document}
-
