--- a/proto3.tex
+++ b/proto3.tex
@@ -7,13 +7,17 @@
 
 
 \section{About this chapter}
-This chapter discusses the procedure to infuse multiple search strategies into a \progLang{Prolog} query resolver with monadic unification. 
-The base implementation for this prototype is \codeLibrary{Mini \progLang{Prolog}} \cite{website:mini-prolog-hugs98}.
+This chapter discusses the procedure to infuse multiple search strategies into a \progLang{Prolog} query resolver
+with monadic unification.
+The base implementation for this prototype is \codeLibrary{Mini \progLang{Prolog}}
+\cite{website:mini-prolog-hugs98}.
 
 
 \section{\codeLibrary{Mini \progLang{Prolog}} \cite{website:mini-prolog-hugs98} architecture}
-\codeLibrary{Mini \progLang{Prolog}} is based on an older implementation of \progLang{Haskell} called \codeLibrary{Hugs 98}. The architecture of
-the library is described in the Figure~\ref{fig:miniprlgarchitecture}. The main components are as follows:
+\codeLibrary{Mini \progLang{Prolog}} is based on an older implementation of \progLang{Haskell} called
+\codeLibrary{Hugs 98}.
+The architecture of the library is described in the Figure~\ref{fig:miniprlgarchitecture}.
+The main components are as follows:
 
 \begin{enumerate}
 \item the language itself,
@@ -31,9 +35,11 @@ the library is described in the Figure~\ref{fig:miniprlgarchitecture}. The main 
 \item a REPL.  
 \end{enumerate}
 
-The main highlight of this implementation is the fact that the query resolver can work with multiple search strategies decided at runtime. A query request 
-will consist of the query itself i.e. the terms to be unified, a knowledge base storing the clauses, the unification procedure and finally a user provided 
-search strategy. 
+The main highlight of this implementation is the fact that the query resolver can work with multiple search
+strategies decided at runtime.
+A query request will consist of the query itself i.e.
+the terms to be unified, a knowledge base storing the clauses, the unification procedure and finally a user
+provided search strategy.
 
 
 \begin{figure}[H]
@@ -47,9 +53,10 @@ search strategy.
 
 \section{Prototype architecture}
 
-The focus of this prototype is to embed the language modification procedure and monadic unification into \cite{website:mini-prolog-hugs98} so to further 
-prove the generality and modularity of the approach from the previous prototypes. 
-The architecture for this prototype is beautifully illustrated by Figure~\ref{fig:architecture-proto-3}. 
+The focus of this prototype is to embed the language modification procedure and monadic unification into
+\cite{website:mini-prolog-hugs98} so to further prove the generality and modularity of the approach from the
+previous prototypes.
+The architecture for this prototype is beautifully illustrated by Figure~\ref{fig:architecture-proto-3}.
 
 \begin{figure}[H]
   \includegraphics[width=1\textwidth]{proto3_architecture_revised.png}
@@ -58,17 +65,19 @@ The architecture for this prototype is beautifully illustrated by Figure~\ref{fi
   \label{fig:architecture-proto-3}
 \end{figure}
 
-Since we are aiming for modularity, most components in the Figure~\ref{fig:miniprlgarchitecture} are untouched. The abstract syntax is modified to conform to
-the \codeLibrary{unification-fd} library \cite{unification-fd-lib}.
-Looking at the center of the figure you will find \textit{query}. This component takes as input the terms to be unified in modified language form, a 
-search strategy, the knowledge base and the monadic unifier, and returns a list of substitutions as required by \codeLibrary{Mini \progLang{Prolog}} library
-\cite{website:mini-prolog-hugs98}. Each of the components in Figure~\ref{fig:architecture-proto-3} will be
-discussed in the sections to come.   
+Since we are aiming for modularity, most components in the Figure~\ref{fig:miniprlgarchitecture} are untouched.
+The abstract syntax is modified to conform to the \codeLibrary{unification-fd} library \cite{unification-fd-lib}.
+Looking at the center of the figure you will find \textit{query}.
+This component takes as input the terms to be unified in modified language form, a search strategy, the knowledge
+base and the monadic unifier, and returns a list of substitutions as required by \codeLibrary{Mini
+  \progLang{Prolog}} library \cite{website:mini-prolog-hugs98}.
+Each of the components in Figure~\ref{fig:architecture-proto-3} will be discussed in the sections to come.
 
 
 \section{Engines (search strategies)}
-This section corresponds to the top left component of Figure~\ref{fig:architecture-proto-3}. Below are the description of the various engines (these are
-called search strategies in \ref{sec:exec-models-prolog}).
+This section corresponds to the top left component of Figure~\ref{fig:architecture-proto-3}.
+Below are the description of the various engines (these are called search strategies in
+\ref{sec:exec-models-prolog}).
 
 \subsection{The Stack engine}
 The stack based engine works on a stack of triples \haskellConstruct{(s,goal,alts)}
@@ -86,8 +95,8 @@ Each member of \haskellClass{alts} is a pair \haskellConstruct{(tp,u)} where:
 \item \haskellConstruct{u} is a unifying substitution that must be combined with the substitution \haskellConstruct{s}.
 \end{enumerate}
 
-The list of relevant clauses at each step in the execution is produced by attempting to unify the head of the current goal with a suitably
-renamed clause from the database.
+The list of relevant clauses at each step in the execution is produced by attempting to unify the head of the
+current goal with a suitably renamed clause from the database.
 
 Listing~\ref{tab:stackengineminiprlg} represents the Stack engine.
 
@@ -102,12 +111,13 @@ Listing~\ref{tab:stackengineminiprlg} represents the Stack engine.
 \subsection{The Pure engine}
 The pure engine works on \haskellConstruct{Prooftree}s. Each node in a \haskellConstruct{Prooftree} corresponds to:
 \begin{enumerate}
-\item Either, a solution to the current goal, represented by \haskellConstruct{Done s}, where \haskellConstruct{s} is the required 
- substitution ,or,
- 
-\item a choice between a number of trees \haskellConstruct{ts}, each corresponding to a proof of a \haskellConstruct{goal} of the current 
-goal, represented by \haskellConstruct{Choice ts}. 
-The proof tree corresponding to an unsolvable goal is \haskellConstruct{Choice []}. 
+\item
+  Either, a solution to the current goal, represented by \haskellConstruct{Done s}, where \haskellConstruct{s} is
+  the required substitution, or,
+\item
+  a choice between a number of trees \haskellConstruct{ts}, each corresponding to a proof of a
+  \haskellConstruct{goal} of the current goal, represented by \haskellConstruct{Choice ts}.
+  The proof tree corresponding to an unsolvable goal is \haskellConstruct{Choice []}. 
 \end{enumerate}
 
 Listing~\ref{tab:pureengineminiprlg} represents the Pure engine.
@@ -121,23 +131,26 @@ Listing~\ref{tab:pureengineminiprlg} represents the Pure engine.
 \end{code-list}
 
 \subsection{The Andorra engine}
-This inference engine implements a variation of the Andorra Principle for logic programming adapted from \cite{haridi1990kernel}. 
-The main difference here is to select a relatively deterministic goal and not the first one. Upon selecting a goal:
+This inference engine implements a variation of the Andorra Principle for logic programming adapted from
+\cite{haridi1990kernel}.
+The main difference here is to select a relatively deterministic goal and not the first one.
+Upon selecting a goal:
 \begin{enumerate}
-\item for each goal g in the list of goals, calculate the resolvents that would result from selecting g, and
-
-\item then choose a g which results in the lowest number of resolvents.
+\item
+  for each goal g in the list of goals, calculate the resolvents that would result from selecting g, and
+\item
+  then choose a g which results in the lowest number of resolvents.
 \end{enumerate}
 
 If some g results in no resolvents then it is regarded as a failure. For instance,
 
 \mint{prolog}|?- append(A,B,[1,2,3]),equals(1,2).)|
 
-\progLang{Prolog} would not perform this optimization and would instead search and backtrack wastefully.  
-If some g results in a single resolvent then that g will get selected;
-by selecting and resolving g, bindings are propagated sooner, and useless
-search can be avoided, since these bindings may prune away choices for
-other clauses.  For example: 
+\progLang{Prolog} would not perform this optimization and would instead search and backtrack wastefully.
+If some g results in a single resolvent then that g will get selected; by selecting and resolving g, bindings are
+propagated sooner, and useless search can be avoided, since these bindings may prune away choices for other
+clauses.
+For example:
 
 \mint{prolog}|?- append(A,B,[1,2,3]),B=[].|
 
@@ -154,9 +167,11 @@ Listing~\ref{tab:andorraengineminiprlg} represents the Andorra engine.
 
 \section{Language}
 \subsection{Current language}
-Listing~\ref{tab:miniprlglang} shows the abstract syntax of \codeLibrary{Mini \progLang{Prolog}} \cite{website:mini-prolog-hugs98}.
-A term can either be a variable or a complex term with an atom as a head. A \haskellConstruct{Clause} consists 
-of a head of type \haskellConstruct{Term} and a body of type \haskellConstruct{[Term]}. 
+Listing~\ref{tab:miniprlglang} shows the abstract syntax of \codeLibrary{Mini \progLang{Prolog}}
+\cite{website:mini-prolog-hugs98}.
+A term can either be a variable or a complex term with an atom as a head.
+A \haskellConstruct{Clause} consists of a head of type \haskellConstruct{Term} and a body of type
+\haskellConstruct{[Term]}.
 
 \begin{code-list}[H]
 \begin{singlespace}
@@ -167,9 +182,10 @@ of a head of type \haskellConstruct{Term} and a body of type \haskellConstruct{[
 \end{code-list}
 
 \subsection{Language modification}
-Listing~\ref{tab:miniprlglangmod} describes the necessary modifications required to adapt the language for monadic unification.
-This procedure consists of opening the language and adding the necessary instances for \codeLibrary{unification-fd} \cite{unification-fd-lib}
-compatibility.
+Listing~\ref{tab:miniprlglangmod} describes the necessary modifications required to adapt the language for monadic
+unification.
+This procedure consists of opening the language and adding the necessary instances for \codeLibrary{unification-fd}
+\cite{unification-fd-lib} compatibility.
 
 \begin{code-list}[H]
 \begin{singlespace}
@@ -183,9 +199,9 @@ compatibility.
 
 \subsection{Current unification}
 
-Listing~\ref{tab:miniprlgunif} describes the current unification mechanism which works on substitutions. The 
-\haskellConstruct{unify} function compares the two terms and returns a list of substitutions as with the base implementations from
-the previous prototypes.
+Listing~\ref{tab:miniprlgunif} describes the current unification mechanism which works on substitutions.
+The \haskellConstruct{unify} function compares the two terms and returns a list of substitutions as with the base
+implementations from the previous prototypes.
 
 \begin{code-list}[H]
 \begin{singlespace}
@@ -208,12 +224,12 @@ in previous prototypes.
 \label{tab:miniprlgmonadicunif}
 \end{code-list}
 
-The major changes occur in \haskellConstruct{substConvertor} used to convert the result of monadic unification into the original \haskellConstruct{Subst}
- form and \haskellConstruct{unify}.
-
+The major changes occur in \haskellConstruct{substConvertor} used to convert the result of monadic unification into
+the original \haskellConstruct{Subst} form and \haskellConstruct{unify}.
 
 \section{Chapter recapitulation}
-Recapitulating, this chapter provided us with a working implementation of a \progLang{Prolog}-like interpreter with the option to change
-the search strategy further proving the modularity and genericity of the language modification and monadic unification procedure.
+Recapitulating, this chapter provided us with a working implementation of a \progLang{Prolog}-like interpreter with
+the option to change the search strategy further proving the modularity and genericity of the language modification
+and monadic unification procedure.
 
 \end{document}
