--- a/pwp.tex
+++ b/pwp.tex
@@ -1,7 +1,6 @@
 \documentclass[thesis-solanki.tex]{subfiles}
 
 
-
 \ifMain
 \externaldocument{thesis-solanki}
 \fi
@@ -15,43 +14,51 @@
 
 \section{About this chapter}
 
-This chapter discusses the properties of the target language \progLang{Prolog} and the feature set that will be translated to the host 
-language to extend its capabilities.
+This chapter discusses the properties of the target language \progLang{Prolog} and the feature set that will be
+translated to the host language to extend its capabilities.
 \progLang{Prolog} is a general purpose logic programming language mainly used in artificial intelligence and
-  computational linguistics.
-  It is a declarative language, i.e., a program is a set of facts an rules running a
-  query on which will return a result.
-  The relation between them is defined by clauses using \textit{Horn Clauses} \cite{wikiprolog}.
-  \progLang{Prolog} is very popular and has a number of implementations
-  \cite{website:comparisonofprologimplementationswiki} for different purposes. \progLang{Prolog} comes from the same family as 
-  \progLang{Haskell} i.e. the declarative paradigm. One of the reasons is that both \progLang{Haskell}, the base language and \progLang{Prolog}, the target language are from the same paradigm.
-  This provides a platform to play around with the conflicting characteristics of the two languages.
-  \progLang{Prolog} seems to be a very popular choice as a target language. Also for the specific topic of embedding \progLang{Prolog} in 
-  \progLang{Haskell}, implementations and publications exist which provide a starting point.
+computational linguistics.
+It is a declarative language, i.e., a program is a set of facts an rules running a query on which will return a
+result.
+The relation between them is defined by clauses using \textit{Horn Clauses} \cite{wikiprolog}.
+\progLang{Prolog} is very popular and has a number of implementations
+\cite{website:comparisonofprologimplementationswiki} for different purposes.
+\progLang{Prolog} comes from the same family as \progLang{Haskell} i.e.
+the declarative paradigm.
+One of the reasons is that both \progLang{Haskell}, the base language and \progLang{Prolog}, the target language
+are from the same paradigm.
+This provides a platform to play around with the conflicting characteristics of the two languages.
+\progLang{Prolog} seems to be a very popular choice as a target language.
+Also for the specific topic of embedding \progLang{Prolog} in \progLang{Haskell}, implementations and publications
+exist which provide a starting point.
   
 \section{Simple Syntax}
 
-\progLang{Prolog} is dynamically typed. It has a single data type, the term, which has several subtypes: atoms, numbers, variables and 
-compound terms \cite{wikiprolog}.
+\progLang{Prolog} is dynamically typed.
+It has a single data type, the term, which has several subtypes: atoms, numbers, variables and compound terms
+\cite{wikiprolog}.
 
 
-An atom is a general-purpose name with no inherent meaning. It is composed of a sequence of characters that is parsed by the 
-\progLang{Prolog} reader as a single unit.
+An atom is a general-purpose name with no inherent meaning.
+It is composed of a sequence of characters that is parsed by the \progLang{Prolog} reader as a single unit.
 
-Numbers can be floats or integers. Many \progLang{Prolog} implementations also provide unbounded integers and rational numbers.
+Numbers can be floats or integers.
+Many \progLang{Prolog} implementations also provide unbounded integers and rational numbers.
 
-Variables are denoted by a string consisting of letters, numbers and underscore characters, and beginning with an upper-case letter or 
-underscore. Variables closely resemble variables in logic in that they are placeholders for arbitrary terms. A variable can become 
-instantiated (bound to equal a specific term) via unification.
+Variables are denoted by a string consisting of letters, numbers and underscore characters, and beginning with an
+upper-case letter or underscore.
+Variables closely resemble variables in logic in that they are placeholders for arbitrary terms.
+A variable can become instantiated (bound to equal a specific term) via unification.
 
-A compound term is composed of an atom called a ``functor'' and a number of ``arguments'', which are again terms. Compound terms are 
-ordinarily written as a functor followed by a comma-separated list of argument terms, which is contained in parentheses. The number of 
-arguments is called the term's arity. An atom can be regarded as a compound term with arity zero.
+A compound term is composed of an atom called a ``functor'' and a number of ``arguments'', which are again terms.
+Compound terms are ordinarily written as a functor followed by a comma-separated list of argument terms, which is
+contained in parentheses.
+The number of arguments is called the term's arity.
+An atom can be regarded as a compound term with arity zero.
 
-
-A \progLang{Prolog} program is a description of relations, defined by the use of clauses. Pure \progLang{Prolog} is restricted to Horn 
-clauses, a Turing-complete subset of first-order predicate logic. The clauses can be one of two types: facts and rules 
-\cite{website:prologintroumiami}.
+A \progLang{Prolog} program is a description of relations, defined by the use of clauses.
+Pure \progLang{Prolog} is restricted to Horn clauses, a Turing-complete subset of first-order predicate logic.
+The clauses can be one of two types: facts and rules \cite{website:prologintroumiami}.
 
 \begin{comment}
 In \progLang{Prolog}
@@ -120,9 +127,11 @@ Variables in \progLang{Prolog} are rather different from those in most other lan
 
 \section{Simple Semantics}
 
-Since the commutative nature of logical disjunction and conjunction, declaratively speaking the order of rules and their sub goals is
-irrelevant. However, the procedural aspect must be taken into account to determine the execution strategy of \progLang{Prolog} since it
-has to deal with impure predicates. Moreover, a particular order of execution can lead to infinite recursion.
+Since the commutative nature of logical disjunction and conjunction, declaratively speaking the order of rules and
+their sub goals is irrelevant.
+However, the procedural aspect must be taken into account to determine the execution strategy of \progLang{Prolog}
+since it has to deal with impure predicates.
+Moreover, a particular order of execution can lead to infinite recursion.
 
 \section{Universal Horn clauses}
 
@@ -142,67 +151,69 @@ terms are equal.
 
 The possibilities are:
 \begin{enumerate}
-\item If \mSV{term1} and \mSV{term2} are constants, then \mSV{term1} and \mSV{term2} unify if and only if they
-  are the same atom, or the same number. Consider the example in Listing~\ref{tab:unifyingconstants}
-\par
-\begin{code-list}[H]
-\begin{singlespace}
-\inputminted{prolog}{prolog-pwp-unify-constants.pl}
-\end{singlespace}
-\caption{Unification with constants.}
-\label{tab:unifyingconstants}
-\end{code-list}
+\item
+  If \mSV{term1} and \mSV{term2} are constants, then \mSV{term1} and \mSV{term2} unify if and only if they are the
+  same atom, or the same number.
+  Consider the example in Listing~\ref{tab:unifyingconstants}
+  \par
+  \begin{code-list}[H]
+    \begin{singlespace}
+      \inputminted{prolog}{prolog-pwp-unify-constants.pl}
+    \end{singlespace}
+    \caption{Unification with constants.}
+    \label{tab:unifyingconstants}
+  \end{code-list}
 
 
-\item If \mSV{term1} is an uninstantiated variable and \mSV{term2} is any type of term, then \mSV{term1}
+\item
+  If \mSV{term1} is an uninstantiated variable and \mSV{term2} is any type of term, then \mSV{term1}
   and \mSV{term2} unify, and \mSV{term1} is instantiated to \mSV{term2}\,.
   Similarly, if \mSV{term2} is a variable and \mSV{term1} is any type of term, then \mSV{term1} and \mSV{term2}
   unify, and \mSV{term2} is instantiated to \mSV{term1}.
   Consider the examples in Listing~\ref{tab:unificationsinglevariable} and 
-  Listing~\ref{tab:unificationmultiplevariable}. (So if they are both 
-variables, they're both instantiated to each other, and we say that they share values.)
-\par
-\begin{code-list}[H]
-\begin{singlespace}
-\inputminted{prolog}{prolog-pwp-unify-single-variable.pl}
-\end{singlespace}
-\caption{Unification with a single variable.}
-\label{tab:unificationsinglevariable}
-\end{code-list}
+  Listing~\ref{tab:unificationmultiplevariable}.
+  (So if they are both variables, they're both instantiated to each other, and we say that they share values.)
+  \par
+  \begin{code-list}[H]
+    \begin{singlespace}
+      \inputminted{prolog}{prolog-pwp-unify-single-variable.pl}
+    \end{singlespace}
+    \caption{Unification with a single variable.}
+    \label{tab:unificationsinglevariable}
+  \end{code-list}
 
-\begin{code-list}[H]
-\begin{singlespace}
-\inputminted{prolog}{prolog-pwp-unify-multi-variable.pl}
-\end{singlespace}
-\caption{Unification with variables.}
-\label{tab:unificationmultiplevariable}
-\end{code-list}
-
-
+  \begin{code-list}[H]
+    \begin{singlespace}
+      \inputminted{prolog}{prolog-pwp-unify-multi-variable.pl}
+    \end{singlespace}
+    \caption{Unification with variables.}
+    \label{tab:unificationmultiplevariable}
+  \end{code-list}
 
 
-\item If \mSV{term1} and \mSV{term2} are complex terms, then they unify if and only if:
+\item
+  If \mSV{term1} and \mSV{term2} are complex terms, then they unify if and only if:
 
-\begin{enumerate}
-\item they have the same functor and arity, and
+  \begin{enumerate}
+  \item
+    they have the same functor and arity, and
+  \item
+    all their corresponding arguments unify, and
+  \item
+    the variable instantiations are compatible.
+  \end{enumerate}
+  Consider the example in Listing~\ref{tab:unificationcomplexterms}.
+  \par
+  \begin{code-list}[H]
+    \begin{singlespace}
+      \inputminted{prolog}{prolog-pwp-unify-complex-terms.pl}
+    \end{singlespace}
+    \caption{Unification of complex terms.}
+    \label{tab:unificationcomplexterms}
+  \end{code-list}
 
-\item all their corresponding arguments unify, and
-
-\item the variable instantiations are compatible.
-\end{enumerate}
-Consider the example in Listing~\ref{tab:unificationcomplexterms}.
-\par
-\begin{code-list}[H]
-\begin{singlespace}
-\inputminted{prolog}{prolog-pwp-unify-complex-terms.pl}
-\end{singlespace}
-\caption{Unification of complex terms.}
-\label{tab:unificationcomplexterms}
-\end{code-list}
-
-
-
-\item Two terms unify if and only if it follows from the previous three clauses that they unify.
+\item
+  Two terms unify if and only if it follows from the previous three clauses that they unify.
 \end{enumerate}
 
 Unification is just a part of the process where the language
@@ -233,25 +244,32 @@ whose operation is illustrated in Figure~\ref{fig:Trace for append}.
 
 \section[{The execution models of \progLang{Prolog}}]{The execution models of \progLang{Prolog}}\label{sec:exec-models-prolog}
 
-The description of how \progLang{Prolog} relates to logic programming is paraphrased from Chapter 6 of \cite{Sterling:1994:APA:175753}.
-Logic programming languages are adapted from abstract interpreters for logic programs. 
-To implement a logic programming language such as \progLang{Prolog} two major decisions about the resolver must be taken:
+The description of how \progLang{Prolog} relates to logic programming is paraphrased from Chapter 6 of
+\cite{Sterling:1994:APA:175753}.
+Logic programming languages are adapted from abstract interpreters for logic programs.
+To implement a logic programming language such as \progLang{Prolog} two major decisions about the resolver must be
+taken:
 \begin{enumerate}
 \item Scheduling policy:
-\endnote{\david{say what a scheduling policy is}}
-Select leftmost goal and replace the non deterministic choice of a clause by sequential search for a unifiable clause and backtracking. 
-Stack scheduling policy, pop the topmost goal for reduction and push derived goals back.
+  \endnote{\david{say what a scheduling policy is}}
+  Select leftmost goal and replace the non deterministic choice of a clause by sequential search for a unifiable
+  clause and backtracking.
+  Stack scheduling policy, pop the topmost goal for reduction and push derived goals back.
 
 \item Search strategy:
-\endnote{\david{say what a search strategy is}}
-\progLang{Prolog} simulates the non-deterministic choice of reducing clause by sequential search and backtracking. The first goal whose 
-head unifies with the goal is chosen. If no match is found then the computation is unwound to the last choice point and the next unifiable 
-clause is chosen.
+  \endnote{\david{say what a search strategy is}}
+  \progLang{Prolog} simulates the non-deterministic choice of reducing clause by sequential search and
+  backtracking.
+  The first goal whose head unifies with the goal is chosen.
+  If no match is found then the computation is unwound to the last choice point and the next unifiable clause is
+  chosen.
 \end{enumerate}
 
-For terminating queries \progLang{Prolog} generates all possible solutions of the goal with respect to the \progLang{Prolog} program. It performs a complete
-depth first traversal of a particular search tree for the goal by always choosing the leftmost goal. Listing~\ref{tab:prlgprgrmtrce} shows
-a sample trace for a query.
+For terminating queries \progLang{Prolog} generates all possible solutions of the goal with respect to the
+\progLang{Prolog} program.
+It performs a complete depth first traversal of a particular search tree for the goal by always choosing the
+leftmost goal.
+Listing~\ref{tab:prlgprgrmtrce} shows a sample trace for a query.
 
 A popular implementation of \progLang{Prolog} is the Warren Abstract Machine \cite{ait1999warren} which has three
 different storage usages; a global stack for compound terms, for environment frames and choice points and lastly
@@ -268,8 +286,8 @@ the trail to record which variables bindings ought to be undone on backtracking.
 As seen in Listing~\ref{tab:prlgprgrmtrce} how \progLang{Prolog} resolves a query. 
 
 \section{\prologConstruct{cuts} in \progLang{Prolog}}
-Consider the example in 
-Listing~\ref{tab:prlgcutfreeexmpl}. A sample query \prologConstruct{p(X)} will result in \ref{tab:prlgcutfreeexmploutput}. 
+Consider the example in Listing~\ref{tab:prlgcutfreeexmpl}.
+A sample query \prologConstruct{p(X)} will result in \ref{tab:prlgcutfreeexmploutput}. 
 
 \begin{code-list}[H]
   \begin{singlespace}
@@ -287,8 +305,10 @@ Listing~\ref{tab:prlgcutfreeexmpl}. A sample query \prologConstruct{p(X)} will r
 \label{tab:prlgcutfreeexmploutput}
 \end{code-list}
 
-A \prologConstruct{cut} represented as \prologConstruct{!} operator \cite{website:prologcut}.
-If \progLang{Prolog} finds a \prologConstruct{cut} in a rule, it will not backtrack on the choices it has made. Consider the example below:
+A \prologConstruct{cut} represented as \prologConstruct{!}
+operator \cite{website:prologcut}.
+If \progLang{Prolog} finds a \prologConstruct{cut} in a rule, it will not backtrack on the choices it has made.
+Consider the example below:
 
 \mint{prolog}|p(X) :- b(X),c(X),!,d(X),e(X).|
 
